--- a/index.html
+++ b/index.html
@@ -23,10 +23,43 @@
 
     <body>
         
-        <div class="container-fluid containerCAPA">            
+        <div class="container-fluid containerCAPA colorBackground">            
             <div class="container">
                 <div class="col-6 col-sm-4"><img class="sizeLOGO" src="https://www.gafisa.com.br/images/logo-gafisa.svg"></div>
             </div>
+
+            <div class="container">           
+                <div class="row">  
+                    <div class="col-sm-8 col-xs">
+                    </div> 
+
+                    <div class="col-sm-4 col-xs marginScreen">
+                        <div id="card" style="background-image: url('assets/img/cellPhone_R1.png'); width: 263px; background-repeat: no-repeat;">                
+                            <model-viewer id="paused-change-demo" interpolation-decay="200"
+                                src="https://cdn.glitch.com/5b7a8ebc-1de7-47b4-8928-0788606b2faf%2FmodeloFORMULA_retirada.glb?v=1598569548732"      
+                                shadow-intensity="3"
+                                camera-controls autoplay animation-name="action01">       
+                            </model-viewer>
+                            <script>
+                              (() => {
+                                const modelViewer = document.querySelector('#paused-change-demo');
+                                const orbitCycle = [
+                                  '45deg 55deg 4m',
+                                  '-60deg 110deg 2m',
+                                  modelViewer.cameraOrbit
+                                ];
+                              
+                                setInterval(() => {
+                                  const currentOrbitIndex = orbitCycle.indexOf(modelViewer.cameraOrbit);
+                                  modelViewer.cameraOrbit =
+                                      orbitCycle[(currentOrbitIndex + 1) % orbitCycle.length];
+                                }, 3000);
+                              })();
+                              </script>                            
+                          </div>
+                    </div>                     
+                </div>
+            </div>            
         </div>
 
         <div class="container-fluid containerPRODUTOS">            
@@ -36,5 +69,16 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
         <script src="js/scripts.js"></script>
+
+        <!-- 💁 Include both scripts below to support all browsers! -->
+        <!-- Loads <model-viewer> for modern browsers: -->
+        <script type="module"
+        src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js">
+        </script>
+
+        <!-- Loads <model-viewer> for old browsers like IE11: -->
+        <script nomodule
+        src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
+        </script>
     </body>
 </html>
