Adicionando Corousel e Card.

--- a/index.html
+++ b/index.html
@@ -26,14 +26,61 @@
         <div class="container-fluid containerCAPA colorBackground">            
             <div class="container">
                 <div class="col-6 col-sm-4"><img class="sizeLOGO" src="https://www.gafisa.com.br/images/logo-gafisa.svg"></div>
-            </div>
+            </div>           
 
             <div class="container">           
-                <div class="row">  
-                    <div class="col-sm-8 col-xs">
+                <div class="row">                    
+                    <div class="col-sm-6 col-xs"> 
+                        <div class="mx-auto">
+                            <h1 style="margin-top: 80px;">UPDATE VILA MADALENA</h1>
+                        </div>     
+       
+                        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="margin-top: 10px;">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active" data-bs-interval="1000">
+                                <img src="assets/img/img01.jpg" class="d-block w-100 mx-auto" alt="">
+                              </div>
+                              <div class="carousel-item" data-bs-interval="1000">
+                                <img src="assets/img/img02.jpg" class="d-block w-100 mx-auto" alt="">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/img03.jpg" class="d-block w-100 mx-auto" alt="">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/img04.jpg" class="d-block w-100 mx-auto" alt="">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/img05.jpg" class="d-block w-100 mx-auto" alt="">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/img06.jpg" class="d-block w-100 mx-auto" alt="">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/img07.jpg" class="d-block w-100 mx-auto" alt="">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/img08.jpg" class="d-block w-100 mx-auto" alt="">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/img09.jpg" class="d-block w-100 mx-auto" alt="">
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div>
+
+                          <div class="mx-auto">
+                            <h2 style="margin-top: 20px;">Um novo conceito de MORAR</h2>
+                        </div>
                     </div> 
 
-                    <div class="col-sm-4 col-xs marginScreen">
+                    <div class="col-sm-6 col-xs marginScreen">
                         <div id="card" style="background-image: url('assets/img/cellPhone_R1.png'); width: 263px; background-repeat: no-repeat;">                
                             <model-viewer id="paused-change-demo" interpolation-decay="200"
                                 src="https://cdn.glitch.com/5b7a8ebc-1de7-47b4-8928-0788606b2faf%2FmodeloFORMULA_retirada.glb?v=1598569548732"      
@@ -62,7 +109,44 @@
             </div>            
         </div>
 
-        <div class="container-fluid containerPRODUTOS">            
+        <div class="container-fluid containerPRODUTOS">  
+            <div class="container">
+                <div class="row">
+                  <div class="col col-xs marginCard">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="..." alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+                  
+                  <div class="col col-xs marginCard">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="..." alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                  </div>                  
+                </div>
+            </div>            
         </div>
 
         <!-- Bootstrap js-->
