Layout de Apresentacao.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
 
                         <div class="mx-auto">                            
                             <h2>Um novo conceito de <span class="typed-text"></span><span class="cursor">&nbsp;</span></h2>
-                        </div>                        
+                        </div>  
+                        <div class="position-absolute bottom-0 start-50 translate-middle-x">                                    
+                            <a type="button" style="margin-bottom: 20px; width: 260px; height: 35px; border-radius: 20px;" class="btn btn-outline-dark" href="#Pg02"><h6>Veja em Realidade Aumentada »</h6></a>
+                        </div>                       
                     </div> 
 
                     <div class="col-sm-6 col-xs marginScreen align-middle">                     
@@ -91,10 +94,7 @@
                                 src="https://cdn.glitch.com/33362749-0d41-4803-8d25-03abce69741a%2Fpredio.glb?v=1621714952130"      
                                 shadow-intensity="3"
                                 camera-controls autoplay animation-name="action01">                                                                 
-                            </model-viewer>       
-                            <div class="mx-auto">                                    
-                                <a type="button" style="width: 280px; border-radius: 20px;" class="btn btn-outline-dark" href="#Pg02">Veja em Realidade Aumentada »</a>
-                            </div>                     
+                            </model-viewer>                                                
                             <script>
                               (() => {
                                 const modelViewer = document.querySelector('#paused-change-demo');
@@ -123,52 +123,38 @@
                 <div class="row marginCard">
                     <div class="col col-xs-6">
                         <div class="card sizeCard mx-auto">
-                            <img src="assets/img/img10.jpg" class="card-img-top" alt="">
+                            <img src="assets/img/img11.jpg" style="display: block; margin-left: auto; margin-right: auto;" class="card-img-top" alt="">
                             <div class="card-body">
-                                <h5 style="padding-top: 20px;">Vila Madalena - São Paulo | SP</h5>
+                                <h5 style="padding-top: 0px;">Opção Fachada Predio</h5>
                                 <hr class="m-0" style="margin-right: 20px !important; margin-left: 20px !important;"/>
-                                <div class="container">
-                                    <div class="row"> 
-                                        <div class="col">
-                                            <i class="fa fa-building fa-2x" style="margin-top: 10px;" aria-hidden="true"></i><h6 style="margin-top: 5px;">Residencial</h6>  
-                                        </div>
-                                        <div class="col">
-                                            <i class="fa fa-bed fa-2x" style="margin-top: 10px;" aria-hidden="true"></i><h6 style="margin-top: 5px;">Studios e Aptos.</h6>
-                                        </div>
-                                        <div class="col">
-                                            <i class="fa fa-arrows-alt fa-2x" style="margin-top: 10px;" aria-hidden="true"></i><h6 style="margin-top: 5px;">20 a 86 m²</h6>
-                                        </div>
-                                    </div>
-                                </div>                      
-                                <hr class="m-0" style="margin-right: 20px !important; margin-left: 20px !important;"/>
-                                <button type="button" class="btn btn-outline-secondary" style="margin-top: 20px;">Secondary</button>
+                                <div class="mx-auto qrCode">
+                                    <img src="assets/img/qrcode.svg" style="width: 150px; display: block; margin-left: auto; margin-right: auto;">
+                                    <h6 style="padding-top: 10px;">Escaneie com seu celular para uma Experiência em AR.</h6>
+                                </div>  
+                                
+                                <div class="buttonAR">
+                                    <a type="button" style="margin-top: 10px; width: 180px; height: 35px; border-radius: 20px; display: block; margin-left: auto; margin-right: auto;" class="btn btn-outline-dark" href="#Pg02"><h6>Clique e veja em AR »</h6></a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col col-xs-6">
                         <div class="card sizeCard mx-auto">
-                            <img src="assets/img/img10.jpg" class="card-img-top" alt="">
+                            <img src="assets/img/img10.jpg" style="display: block; margin-left: auto; margin-right: auto;" class="card-img-top" alt="">
                             <div class="card-body">
-                                <h5 style="padding-top: 20px;">Vila Madalena - São Paulo | SP</h5>
+                                <h5 style="padding-top: 0px;">Opção Planta</h5>
                                 <hr class="m-0" style="margin-right: 20px !important; margin-left: 20px !important;"/>
-                                <div class="container">
-                                    <div class="row"> 
-                                        <div class="col">
-                                            <i class="fa fa-building fa-2x" style="margin-top: 10px;" aria-hidden="true"></i><h6 style="margin-top: 5px;">Residencial</h6>  
-                                        </div>
-                                        <div class="col">
-                                            <i class="fa fa-bed fa-2x" style="margin-top: 10px;" aria-hidden="true"></i><h6 style="margin-top: 5px;">Studios e Aptos.</h6>
-                                        </div>
-                                        <div class="col">
-                                            <i class="fa fa-arrows-alt fa-2x" style="margin-top: 10px;" aria-hidden="true"></i><h6 style="margin-top: 5px;">20 a 86 m²</h6>
-                                        </div>
-                                    </div>
-                                </div>                      
-                                <hr class="m-0" style="margin-right: 20px !important; margin-left: 20px !important;"/>
-                                <button type="button" class="btn btn-outline-secondary" style="margin-top: 20px;">Secondary</button>
+                                <div class="mx-auto qrCode">
+                                    <img src="assets/img/qrcode.svg" style="width: 150px; display: block; margin-left: auto; margin-right: auto;">
+                                    <h6 style="padding-top: 10px;">Escaneie com seu celular para uma Experiência em AR.</h6>
+                                </div>  
+                                
+                                <div class="buttonAR">
+                                    <a type="button" style="margin-top: 10px; width: 180px; height: 35px; border-radius: 20px; display: block; margin-left: auto; margin-right: auto;" class="btn btn-outline-dark" href="#Pg02"><h6>Clique e veja em AR »</h6></a>
+                                </div>
                             </div>
-                        </div>  
+                        </div>
                     </div>  
                 </div>
             </div>            
