Adicionando Secao de Ajuda

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <body>       
         <div class="container-fluid containerCAPA colorBackground">            
             <div class="container">
-                <div class="col-6 col-sm-4"><img class="sizeLOGO" src="assets/img/logo-gafisa.svg"></div>
+                <div class="col-5 col-sm-3"><img class="sizeLOGO" src="assets/img/logo-gafisa.svg"></div>
             </div>           
 
             <div class="container">           
                 <div class="row">                    
                     <div class="col-sm-6 col-xs"> 
                         <div class="mx-auto">
-                            <h1 style="margin-top: 80px;"><b>UPDATE</b> VILA MADALENA</h1>
+                            <h3 style="margin-top: 80px; color: black;">Visite seu novo imóvel <b>SEM SAIR DE CASA</b></h3>
                         </div>                  
 
                         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="margin-top: 10px;">
@@ -116,9 +116,33 @@
                     </div>                     
                 </div>
             </div>       
-        </div>         
+        </div>   
+        
+        <div class="containerExplicacao position-relative" id="Pg02">          
+          <div class="container">
+            <div class="row">              
+              <div class="col-xs col-sm-4">
+                <div class="cellPhone">
+                  <div class="position-absolute top-50 start-10 translate-middle-y">
+                    <img src="assets/img/cellPhone.png">
+                  </div> 
+                </div>                               
+              </div>
+              <div class="col-xs col-sm-7">                  
+                <div class="position-absolute top-50 translate-middle-y">   
+                  <h4 style="margin-bottom: 20px;">Para uma Experiência em <b>Realidade Aumentada:</b></h4>     
+                  <h3 class="cellPhoneMobile" style="margin-bottom: 10px;"><b>1.</b> Escolha uma das opções abaixo;</h3>                         
+                  <h3 class="cellPhone" style="margin-bottom: 10px;"><b>1.</b> Escaneie algum dos QrCode abaixo com seu celular;</h3>
+                  <h3 style="margin-bottom: 10px;"><b>2.</b> Clique no Botão;</h3>
+                  <h3 style="margin-bottom: 10px;"><b>3.</b> Siga os passos da aplicação para escanear o chão;</h3>
+                  <h3><b>4.</b> Ajuste a escala e tamanho se desejado.</h3>                  
+                </div>  
+              </div>             
+            </div>
+          </div>          
+        </div>
 
-        <div class="container-fluid containerPRODUTOS" id="Pg02" >  
+        <div class="container-fluid containerPRODUTOS" >  
             <div class="container">
                 <div class="row marginCard">
                     <div class="col col-xs-6">
@@ -158,7 +182,7 @@
                     </div>  
                 </div>
             </div>            
-        </div>
+        </div>       
 
         <!-- Bootstrap js-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
