--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="row">                    
                     <div class="col-sm-6 col-xs"> 
                         <div class="mx-auto">
-                            <h3 style="margin-top: 80px; color: black;">Visite seu novo imóvel <b>SEM SAIR DE CASA</b></h3>
+                            <h3 style="margin-top: 80px; color: black;">Visite seu empreendimento <b>SEM SAIR DE CASA</b></h3>
                         </div>                  
 
                         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="margin-top: 10px;">
@@ -124,7 +124,7 @@
               <div class="col-xs col-sm-4">
                 <div class="cellPhone">
                   <div class="position-absolute top-50 start-10 translate-middle-y">
-                    <img src="assets/img/cellPhone.png">
+                    <img src="assets/img/cellPhone-02.png">
                   </div> 
                 </div>                               
               </div>
@@ -133,7 +133,10 @@
                   <h4 style="margin-bottom: 20px;">Para uma Experiência em <b>Realidade Aumentada:</b></h4>     
                   <h3 class="cellPhoneMobile" style="margin-bottom: 10px;"><b>1.</b> Escolha uma das opções abaixo;</h3>                         
                   <h3 class="cellPhone" style="margin-bottom: 10px;"><b>1.</b> Escaneie algum dos QrCode abaixo com seu celular;</h3>
-                  <h3 style="margin-bottom: 10px;"><b>2.</b> Clique no Botão;</h3>
+                  <h3 style="margin-bottom: 10px;"><b>2.</b> Clique no Botão <img id="imageAR" style=" 
+                    background-color: white;
+                    border-radius: 30px;
+                    border-style: solid;" src="https://cdn.glitch.com/33362749-0d41-4803-8d25-03abce69741a%2FbuttonAR_BR.png?v=1598445617658" width="170vw"  height="40"></h3>
                   <h3 style="margin-bottom: 10px;"><b>3.</b> Siga os passos da aplicação para escanear o chão;</h3>
                   <h3><b>4.</b> Ajuste a escala e tamanho se desejado.</h3>                  
                 </div>  
@@ -149,8 +152,8 @@
                         <div class="card sizeCard mx-auto">
                             <img src="assets/img/img11.jpg" style="display: block; margin-left: auto; margin-right: auto;" class="card-img-top" alt="">
                             <div class="card-body">
-                                <h5 style="padding-top: 0px;">Opção Fachada Predio</h5>
-                                <hr class="m-0" style="margin-right: 20px !important; margin-left: 20px !important;"/>
+                                <h5 style="padding-top: 0px;"><b>Update Vila Madalena</b> - Fachada Predio</h5>
+                                <hr class="m-0" style="margin-right: 20px !important; margin-left: 20px !important;"/>                                
                                 <div class="mx-auto qrCode">
                                     <img src="assets/img/qrcode.svg" style="width: 150px; display: block; margin-left: auto; margin-right: auto;">
                                     <h6 style="padding-top: 10px;">Escaneie com seu celular para uma Experiência em AR.</h6>
@@ -167,7 +170,7 @@
                         <div class="card sizeCard mx-auto">
                             <img src="assets/img/img10.jpg" style="display: block; margin-left: auto; margin-right: auto;" class="card-img-top" alt="">
                             <div class="card-body">
-                                <h5 style="padding-top: 0px;">Opção Planta</h5>
+                                <h5 style="padding-top: 0px;"><b>Update Vila Madalena</b> - Opção Planta</h5>
                                 <hr class="m-0" style="margin-right: 20px !important; margin-left: 20px !important;"/>
                                 <div class="mx-auto qrCode">
                                     <img src="assets/img/qrcode.svg" style="width: 150px; display: block; margin-left: auto; margin-right: auto;">
