--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         
         <!-- CSS -->
-        <link href="css/styles.css" rel="stylesheet" />        
-        <link href="css/stylesAnimationFont.css" rel="stylesheet" />
+        <link href="css/styles.css?12345" rel="stylesheet" />        
+        <link href="css/stylesAnimationFont.css?12345" rel="stylesheet" />
 
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">        
     </head>
@@ -128,18 +128,36 @@
                   </div> 
                 </div>                               
               </div>
-              <div class="col-xs col-sm-7">                  
-                <div class="position-absolute top-50 translate-middle-y">   
-                  <h4 style="margin-bottom: 20px;">Para uma Experiência em <b>Realidade Aumentada:</b></h4>     
-                  <h3 class="cellPhoneMobile" style="margin-bottom: 10px;"><b>1.</b> Escolha uma das opções abaixo;</h3>                         
-                  <h3 class="cellPhone" style="margin-bottom: 10px;"><b>1.</b> Escaneie algum dos QrCode abaixo com seu celular;</h3>
-                  <h3 style="margin-bottom: 10px;"><b>2.</b> Clique no Botão <img id="imageAR" style=" 
-                    background-color: white;
-                    border-radius: 30px;
-                    border-style: solid;" src="https://cdn.glitch.com/33362749-0d41-4803-8d25-03abce69741a%2FbuttonAR_BR.png?v=1598445617658" width="170vw"  height="40"></h3>
-                  <h3 style="margin-bottom: 10px;"><b>3.</b> Siga os passos da aplicação para escanear o chão;</h3>
-                  <h3><b>4.</b> Ajuste a escala e tamanho se desejado.</h3>                  
-                </div>  
+              <div class="col-xs col-sm-7"> 
+
+                <!-- Para tela do Desktop -->
+                <div class="cellPhone">
+                  <div class="position-absolute top-50 translate-middle-y">   
+                    <h4 style="margin-bottom: 20px;">Para uma Experiência em <b>Realidade Aumentada:</b></h4>                         
+                    <h3 style="margin-bottom: 10px;"><b>1.</b> Escaneie algum dos QrCode abaixo com seu celular;</h3>
+                    <h3 style="margin-bottom: 10px;"><b>2.</b> Clique no Botão <img id="imageAR" style=" 
+                      background-color: white;
+                      border-radius: 30px;
+                      border-style: solid;" src="https://cdn.glitch.com/33362749-0d41-4803-8d25-03abce69741a%2FbuttonAR_BR.png?v=1598445617658" width="170vw"  height="40"></h3>
+                    <h3 style="margin-bottom: 10px;"><b>3.</b> Siga os passos da aplicação para escanear o chão;</h3>
+                    <h3><b>4.</b> Ajuste a escala e tamanho se desejado.</h3>                  
+                  </div> 
+                </div> 
+                
+                <!-- Para tela do celular -->
+                <div class="cellPhoneMobile">
+                  <div >   
+                    <h3 style="margin-bottom: 20px; margin-top: 20px;">Para uma Experiência em <b>Realidade Aumentada:</b></h3>     
+                    <h4 style="margin-bottom: 10px;"><b>1.</b> Escolha uma das opções abaixo;</h4>            
+                    <h4 style="margin-bottom: 10px;"><b>2.</b> Clique no Botão <img id="imageAR" style=" 
+                      background-color: white;
+                      border-radius: 30px;
+                      border-style: solid;" src="https://cdn.glitch.com/33362749-0d41-4803-8d25-03abce69741a%2FbuttonAR_BR.png?v=1598445617658" width="160vw"  height="35"></h4>
+                    <h4 style="margin-bottom: 10px;"><b>3.</b> Siga os passos da aplicação para escanear o chão;</h4>
+                    <h4><b>4.</b> Ajuste a escala e tamanho se desejado.</h4>                  
+                  </div> 
+                </div>      
+
               </div>             
             </div>
           </div>          
@@ -190,7 +208,7 @@
         <!-- Bootstrap js-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts.js?12345"></script>
 
         <!-- 💁 Include both scripts below to support all browsers! -->
         <!-- Loads <model-viewer> for modern browsers: -->
