--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <div class="col-xs col-sm-4">
                 <div class="cellPhone">
                   <div class="position-absolute top-50 start-10 translate-middle-y">
-                    <img src="assets/img/cellPhone-02.png">
+                    <img src="assets/img/cellPhone-02.png" style="height: 55vh;">
                   </div> 
                 </div>                               
               </div>
