Adicionando implementacao inicial da v2 do site para aplicacao gafisa em AR.

--- a/v1/index.html
+++ b/v1/index.html
@@ -88,7 +88,7 @@
 
                         <div id="card">                
                             <model-viewer id="paused-change-demo" interpolation-decay="200"
-                                src="https://cdn.glitch.com/33362749-0d41-4803-8d25-03abce69741a%2FUpdateExternoGLB.glb?v=1622223473781"      
+                                src="https://holloxobjetos.s3.sa-east-1.amazonaws.com/PREDIOEXTERNO-home.glb"      
                                 shadow-intensity="3"
                                 camera-controls autoplay animation-name="action01">                                                                 
                             </model-viewer>                                                
