--- a/v2/index.html
+++ b/v2/index.html
@@ -22,13 +22,45 @@
 
     <body>
       <div class="home_page">
-        <div class="barra_superior"></div>
-        <div class="background_image"></div>
-        <div class="page-cards"></div>
 
-        <div style="position: relative; display: flex; justify-content: center; align-items: center;">
-          <div class="triangulo"></div>
-        </div>                
+        <div class="barra_superior"></div>
+
+        <div class="background_image">
+          <div style="position: relative; display: flex;">
+            <div class="triangulo"></div>
+          </div>
+        </div>
+
+        <div class="page-cards">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card">
+                  <img src="assets/img/img10.jpg" class="card-img-top" style="padding: 10px;">
+                  <div class="card-body" style="text-align: center;">
+                    <h5 class="card-text"><b>Update Vila Madalena - Opção Planta</b></h5>
+                    <div class="desktop-option">
+                      <img src="assets/img/qrcode-apartamento.svg" class="img-qr-code">
+                      <h6 class="card-text" id="text-scan"><b>Escaneie com seu smartphone para uma Experiência em AR.</b></h6>
+                    </div>                    
+                  </div>
+                </div>  
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img src="assets/img/img11.jpg" class="card-img-top" style="padding: 10px; text-align: center;">
+                  <div class="card-body" style="text-align: center;">
+                    <h5 class="card-text"><b>Update Vila Madalena - Opção Fachada Externa</b></h5>
+                    <div class="desktop-option">                      
+                      <img src="assets/img/qrcode-predio.svg" class="img-qr-code">
+                      <h6 class="card-text" id="text-scan"><b>Escaneie com seu smartphone para uma Experiência em AR.</b></h6>
+                    </div>  
+                  </div>
+                </div>  
+              </div>              
+            </div>
+          </div>              
+        </div>       
       </div>      
 
       <!-- Bootstrap js-->
