--- a/v2/index.html
+++ b/v2/index.html
@@ -25,7 +25,8 @@
 
         <div class="barra_superior"></div>
 
-        <div class="background_image">
+        <div class="background">
+          <div class="background_image" id="background_image"></div>
           <div style="position: relative; display: flex;">
             <div class="triangulo"></div>
           </div>
