--- a/v2/index.html
+++ b/v2/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="page-cards">
-          <div class="container">
+          <div class="container-fluid">
             <div class="row">
               <div class="col">
                 <div class="card">
@@ -59,10 +59,19 @@
                   </div>
                 </div>  
               </div>              
-            </div>
-          </div>              
-        </div>       
-      </div>      
+            </div>            
+           
+            <div class="row" style="margin-top: 30px;">
+              <div class="col-sm-8 col-md-7 m-0">                
+                <h4 style="color: white; padding-left: 10px;">Rua Simpatia 200, Vila Madalena - São Paulo | SP</h4>                
+              </div>
+              <div class="col-sm-8 col-md-5 m-0">                  
+                <img src="assets/img/selo_gafisa.png" class="card-img-top" style="width: 220px; position: absolute; right: 0;">                           
+              </div> 
+            </div>           
+          </div>          
+        </div>        
+      </div>     
 
       <!-- Bootstrap js-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
