--- a/v2 _demo_preview/index.html
+++ b/v2 _demo_preview/index.html
@@ -27,7 +27,7 @@
           <div class="row">            
             <div class="col m-0" style="height: 15vh; display: flex; align-items: center; justify-content: center;">                  
               <a href="#" target="_blank"><img src="assets/img/Logo_Bell_Domani.png" class="card-img-top" style="height: 16vh; width: auto;"></a>            
-              <h3 style="color: white; padding-left: 10px; text-transform: uppercase;">Visite agora mesmo o seu novo apartamento <b>sem sair de casa!</b></h3>                            
+              <h3 style="color: #676153; padding-left: 10px; text-transform: uppercase;">Visite agora mesmo o seu novo apartamento <b>sem sair de casa!</b></h3>                            
             </div> 
           </div>
         </div>
@@ -105,8 +105,7 @@
           </div>            
           
           <div class="row" style="margin-top: 30px; height: 10vh;">
-            <div class="col m-0" style="position: relative; display: flex; align-items: center; justify-content: center;">                
-              <a href="#" target="_blank"><img src="assets/img/Logo_Bell_Domani.png" class="card-img-top" style="height: 16vh; width: auto;"></a>
+            <div class="col m-0" style="position: relative; display: flex; align-items: center; justify-content: center; background-color: #74934d;">              
               <h4 style="color: white; padding-left: 10px;">R. Aracajú, 1320 - Santo Antônio, Joinville | SC</h4>                
             </div>            
           </div>  
